# payments-engine-rs

./: Cargo.toml  README.md
etc/: big_num.csv  deposit_chargeback.csv  dispute_deposit.csv  funds_held.csv  noise.csv  process_many.csv  same_tx_id.csv  smoketest.csv  transactions.csv  withdrawal_more_than_balance.csv
src/: cli.rs  domain.rs  lib.rs  main.rs  runtime.rs
src/core/: aggregate.rs  command.rs  mod.rs  repository.rs  store.rs
tests/: commands.rs  snapshots.rs
tests/snapshots/: snapshots__basic.snap  snapshots__deposit_chargeback.snap  snapshots__dispute_deposit.snap  snapshots__funds_held.snap  snapshots__process_many_records.snap  snapshots__same_tx_id_attempt.snap  snapshots__smoke_test.snap  snapshots__trigger_locked.snap
