[package]
name = "payments-engine-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
test = []

[dependencies]
anyhow = "1.0.80"
async-trait = "0.1.77"
clap = { version = "4", features = ["derive", "env"] }
csv = "1.3.0"
either = "1.10.0"
flume = "0.11.0"
futures = "0.3.30"
num = "0.4.1"
rust_decimal = "1.35.0"
rust_decimal_macros = "1.34.2"
serde = { version = "1", features = ["derive"] }
tap = "1.0.1"
thiserror = "1"
tokio = { version = "1.37.0", features = ["macros", "rt-multi-thread"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
tracing-error = "0.2.0"

[dev-dependencies]
assert_cmd = "2.0"
insta = "1.38.0"
lazy_static = "1.4.0"

[[test]]
name = "commands"
path = "tests/commands.rs"
required-features = ["test"]